# termfast

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  latest.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/termfast/app/: MainActivity.kt  RustBridge.kt
android/app/src/main/java/com/termfast/app/data/: CredentialManager.kt  ErrorMessages.kt  Models.kt  RustEvent.kt
android/app/src/main/java/com/termfast/app/service/: NotificationHelper.kt  SshVpnService.kt
android/app/src/main/java/com/termfast/app/ui/: TermFastApp.kt
android/app/src/main/java/com/termfast/app/ui/screen/: CloudSyncSection.kt  ServerDetailScreen.kt  ServerEditScreen.kt  ServerListScreen.kt  SettingsScreen.kt  TerminalScreen.kt  TerminalSessionManager.kt
android/app/src/main/java/com/termfast/app/update/: GitHubReleaseUpdater.kt
android/app/src/main/res/values/: colors.xml
android/app/src/test/java/com/termfast/app/service/: HostKeyFingerprintParserTest.kt
crates/android-ffi/: Cargo.toml
crates/android-ffi/src/: cloud_sync.rs  config.rs  credential.rs  event.rs  jni.rs  lib.rs  network.rs  proxy_api.rs  runtime.rs  server_api.rs  vpn.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  main.rs
crates/cloud-sync/: Cargo.toml
crates/cloud-sync/examples/: test_decrypt.rs
crates/cloud-sync/src/: baidu.rs  callback.rs  dropbox.rs  lib.rs  proxy.rs  sync_crypto.rs  sync_state.rs  token_store.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  migration.rs  platform.rs
crates/core/src/config/: builtin_templates.rs  config.rs  manager.rs  migration.rs  mod.rs  runtime_state.rs  storage.rs
crates/core/src/log/: mod.rs
crates/core/src/proxy/: channel.rs  http.rs  manager.rs  mixed.rs  mod.rs  socks5.rs
crates/core/src/server/: instance.rs  lifecycle.rs  manager.rs  mod.rs
crates/core/src/ssh/: auth.rs  channel_opener.rs  client.rs  exec.rs  mod.rs  protector.rs  pty.rs
crates/core/src/trigger/: engine.rs  health.rs  ipcheck.rs  mod.rs  template.rs
crates/core/tests/: ssh_integration_test.rs
crates/credential/: Cargo.toml
crates/credential/src/: encrypted.rs  encrypted_adapter.rs  keychain.rs  lib.rs  memory.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: frame.rs  handler.rs  lib.rs  lock.rs  proto.rs  server.rs  terminal.rs
crates/daemon/tests/: e2e_test.rs  integration_test.rs  proxy_benchmark.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: autostart.rs  lib.rs  network.rs  notification.rs  tray.rs
crates/desktop/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  mock_ssh.rs
docs/: android-implementation-plan.md  android-phase1-ui.md  发布.sh  图标定稿.psd
e2e/: fixtures.ts  mock-ssh-server.ts  onboarding.spec.ts  proxy-benchmark.spec.ts  server-list.spec.ts  task-flows.spec.ts  trigger-editor.spec.ts
playwright-report/: index.html
scripts/: generate-latest-json.mjs
server/: cloud-sync.php  config.local.example.php  ip.php  ip2.php  latest.php
server/lib/: geoip.php
spikes/russh-stress/: Cargo.toml
spikes/russh-stress/src/: main.rs  mock_ssh.rs  stress_test.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  dev.json
src-tauri/icons/: icon-manifest.json  icon.icns
src-tauri/src/: credential_manager.rs  daemon_embed.rs  lib.rs  main.rs
src/components/desktop/: TitleBar.tsx
src/components/shared/: AddServerDialog.test.tsx  AddServerDialog.tsx  CredentialGate.tsx  ErrorBoundary.tsx  GlobalIndicator.test.tsx  GlobalIndicator.tsx  HostKeyMismatchDialog.tsx  LogPanel.test.tsx  LogPanel.tsx  LogViewer.test.tsx  LogViewer.tsx  Onboarding.test.tsx  Onboarding.tsx  PendingEventsBanner.test.tsx  PendingEventsBanner.tsx  ServerDetail.test.tsx  ServerDetail.tsx  ServerList.test.tsx  ServerList.tsx  SettingsPage.test.tsx  SettingsPage.tsx  TemplateLibrary.test.tsx  TemplateLibrary.tsx  TerminalView.tsx  TitleBar.test.tsx  TriggerEditor.test.tsx  TriggerEditor.tsx  TriggerList.test.tsx  TriggerList.tsx  TriggerTemplatePicker.tsx  UndoToast.test.tsx  UndoToast.tsx
src/components/ui/: ConfirmDialog.tsx  ContextMenu.tsx  Modal.tsx  Skeleton.tsx  button.tsx  dialog.tsx  input.tsx  toast.ts
src/hooks/: useDaemonEvents.ts  useIpc.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useTrayMenu.ts
src/i18n/: config.test.ts  config.ts
src/i18n/locales/: en.json  zh-CN.json
src/lib/: utils.ts
src/stores/: configStore.ts  logStore.test.ts  logStore.ts  serverStore.test.ts  serverStore.ts  triggerStore.ts
src/styles/: index.css
src/test/: setup.ts
src/types/: index.ts
