[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/credential",
    "crates/daemon",
    "crates/cli",
    "crates/test-utils",
    "crates/desktop",
    "src-tauri",
]
exclude = ["spikes/russh-stress"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["VPS Guard Contributors"]

[workspace.dependencies]
# SSH (plan specified =0.61.2; latest available is 0.62.2 — deviation recorded)
russh = { version = "=0.62.2", default-features = false, features = ["flate2", "ring"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
directories = "6"
toml = "1"
async-trait = "0.1"
rand = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }
comfy-table = "7"

# Internal crates
vps-guard-core = { path = "crates/core" }
vps-guard-credential = { path = "crates/credential" }
vps-guard-daemon = { path = "crates/daemon" }
vps-guard-desktop = { path = "crates/desktop" }
vps-guard-test-utils = { path = "crates/test-utils" }

# Test dependencies
tempfile = "3"
