[package]
name = "termfast-app"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["TermFast Contributors"]

[lib]
name = "termfast_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-network = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
termfast-core = { workspace = true }
termfast-credential = { workspace = true }
termfast-daemon = { workspace = true }
termfast-desktop = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
