[package]
name = "vps-guard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "vps-guard"
path = "src/main.rs"

[dependencies]
vps-guard-daemon = { workspace = true }
vps-guard-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
