[package]
name = "termfast-cloud-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
termfast-credential = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "time", "sync"] }
reqwest = { workspace = true, features = ["json", "rustls-tls", "multipart"] }
base64 = { workspace = true }
sha2 = { workspace = true }
md-5 = "0.10"
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
url = "2"
urlencoding = "2"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["zeroize_derive"] }
unicode-normalization = "0.1"

# Platform-specific proxy detection
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Registry"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
