[package]
name = "termfast-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
russh = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ring = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
directories = { workspace = true }
regex = "1"
toml = { workspace = true }
async-trait = { workspace = true }
ssh-key = { version = "0.7.0-rc.11", features = ["rand_core", "getrandom", "encryption"] }
rand = { workspace = true }
socket2 = "0.5"
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
termfast-test-utils = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
