[package]
name = "vps-guard-credential"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vps-guard-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "4", features = ["apple-native-keyring-store"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "4", features = ["windows-native-keyring-store"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "4", features = ["zbus-secret-service-keyring-store"] }

[dev-dependencies]
tokio = { workspace = true }
