[package]
name = "termfast-credential"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
termfast-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "4", features = ["apple-native-keyring-store"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "4", features = ["windows-native-keyring-store"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "4", features = ["zbus-secret-service-keyring-store"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
