[package]
name = "vps-guard-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vps-guard-core = { workspace = true }
vps-guard-credential = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
base64 = { workspace = true }
mach2 = "0.6.0"
regex = "1.13.0"

[dev-dependencies]
vps-guard-test-utils = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
