[package]
name = "termfast-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
termfast-core = { workspace = true }
termfast-credential = { workspace = true }
zeroize = "1"
russh = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
base64 = { workspace = true }
regex = "1.13.0"

[dev-dependencies]
termfast-test-utils = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dev-dependencies]
mach2 = "0.6.0"
