[package]
name = "vps-guard-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
russh = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
